# OpenNURBS

./: .travis.yml  CMakeLists.txt  INSTALL  README.md
scripts/travis/: clangFormatChecker.sh  clangFormatter.sh  cppChecker.sh  installDeps.sh
src/: CMakeLists.txt
src/geom_defs/: gCurve.hpp  gPoint.hpp
src/main/: CMakeLists.txt  OpenNURBS.cpp
